--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "sslcommerz-nodejs": "^1.0.8",
     "validator": "^13.0.0"
   },
   "devDependencies": {
